# llm_via_api

./: .env.template  README.md  llm_connector.py  pyproject.toml  test_llm.py  test_local_llm.py  test_openai.py
.cursor/rules/: python-uv.mdc
